# crows-nest

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/commands/: add-to-inbox.md  crows-nest.md
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml
config/hooks/: post-merge
config/launchd/: com.crows-nest.archiver.plist  com.crows-nest.imessage-listener.plist  com.crows-nest.ingest-poller.plist  com.crows-nest.listener.plist  com.crows-nest.obsidian-scanner.plist  com.crows-nest.processor.plist  com.crows-nest.rss-refresh.plist  com.crows-nest.summarizer.plist
config/systemd/: crows-nest-archiver.service  crows-nest-archiver.timer  crows-nest-listener.service  crows-nest-listener.timer  crows-nest-processor.service  crows-nest-processor.timer  crows-nest-summarizer.service  crows-nest-summarizer.timer
docs/superpowers/plans/: 2026-03-27-crows-nest-refactor.md  2026-03-27-video-backfill-analysis.md  2026-04-07-note-organization.md  2026-04-12-vault-relative-paths.md  2026-04-17-pwa-share-target.md
launchd/: com.crows-nest.mcp.plist
pipeline/: add_link.py  archiver.py  backfill_date_folders.py  backfill_video.py  cleanup_media.py  config.py  consolidator.py  content_types.py  db.py  feeds.opml  fix_obsidian_names.py  imessage_listener.py  ingest_poller.py  keychain_secrets.py  migrate_clippings.py  migrate_media_paths.py  migrate_relative_paths.py  migrate_to_resources.py  obsidian_scanner.py  processor.py  rss_listener.py  signal_doctor.py  signal_listener.py  status.py  summarizer.py  sync_clippings.py  utils.py
planning/: README.md  backlog.md  progress.md
scripts/: install-launchd.sh  whisper-transcribe.sh
src/mcp_knowledge/: __main__.py  api.py  config.py  embeddings.py  knowledge.py  mcp_adapter.py  media_loader.py  scheduler.py  semantic.py  server.py
tests/: test_api.py  test_config_paths.py  test_embeddings.py  test_media_loader.py  test_migrate_clippings.py  test_pipeline_queue.py  test_rss_db.py  test_rss_listener.py  test_rss_mcp_tools.py  test_rss_tools.py  test_semantic.py  test_server.py  test_weekly_log.py
tests/pipeline/: test_add_link.py  test_archiver_credentials.py  test_backfill.py  test_backfill_video.py  test_cleanup_media.py  test_config_paths.py  test_consolidator.py  test_content_types.py  test_db.py  test_imessage_listener.py  test_ingest_poller.py  test_media_relocation.py  test_migrate_media_paths.py  test_obsidian_scanner.py  test_processor.py  test_signal_doctor.py  test_signal_listener.py  test_status_sources.py  test_summarizer.py  test_utils.py  test_video_path.py
worker/: bookmarklet.html  package.json  schema.sql  wrangler.toml
worker/extension/: manifest.json  options.html  options.js  popup.html  popup.js
worker/src/: index.js  pwa.js
(+1 files in other folders)
