[project]
name = "crows-nest"
version = "0.2.0"
description = "MCP knowledge server and Signal-to-Obsidian content preservation pipeline"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "thefuzz[speedup]",
]

[project.scripts]
mcp-knowledge-server = "mcp_knowledge.server:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.24"]
archive = ["boto3>=1.28", "requests>=2.31"]
semantic = ["chromadb>=0.5", "fastembed>=0.3"]
rss = ["feedparser>=6.0", "requests>=2.31"]
all = ["crows-nest[archive,semantic,rss]"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_knowledge"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
