[project]
name = "crows-nest"
version = "0.2.0"
description = "MCP knowledge server and Signal-to-Obsidian content preservation pipeline"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "thefuzz[speedup]",
    "requests>=2.31",
]

[project.scripts]
mcp-knowledge-server = "mcp_knowledge.server:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.24"]
archive = ["boto3>=1.28"]
rss = ["feedparser>=6.0"]
all = ["crows-nest[archive,rss]"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_knowledge"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
