# System-level runtime dependencies (not pip-installable via this package):
#   yt-dlp       — video/audio downloader (brew install yt-dlp)
#   ffmpeg       — audio extraction (brew install ffmpeg)
#   whisper.cpp  — local speech-to-text (see pipeline/config.py)
#
# yt-dlp impersonation support (required for TikTok downloads):
#   After installing yt-dlp via brew, install curl_cffi 0.10–0.14 into
#   yt-dlp's own Python environment:
#
#     /opt/homebrew/Cellar/yt-dlp/<version>/libexec/bin/python3 \
#         -m pip install "curl_cffi>=0.10,<0.15"
#
#   Verify with: yt-dlp --list-impersonate-targets

[project]
name = "crows-nest"
version = "0.2.0"
description = "MCP knowledge server and Signal-to-Obsidian content preservation pipeline"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "thefuzz[speedup]",
    "requests>=2.31",
    "second-brain-service-base",
    "starlette>=0.38.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
mcp-knowledge-server = "mcp_knowledge.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.24"]
archive = ["boto3>=1.28"]
rss = ["feedparser>=6.0"]
all = ["crows-nest[archive,rss]"]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_knowledge"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
